--- a/src/comp/styles.scss
+++ b/src/comp/styles.scss
@@ -1,9 +1,13 @@
 .bod{
     min-height: 90vh;
 }
-.p-4{
+.pl-14{
     padding: 4px;
     padding-left: 14px;
+}
+.pr-14{
+    padding: 4px;
+    padding-right: 14px;
 }
 .appBar{
     height: 10vh;
