--- a/src/comp/styles.scss
+++ b/src/comp/styles.scss
@@ -3,6 +3,63 @@ $dark-prm: #b76d68;
 $dark-sec: #1b2432;
 $light-prm: #7a306c;
 $light-sec: #eaeaea;
+
+//theme specific styling
+.dark {
+  h3,
+  .icon,
+  .ddIcon {
+    color: $dark-prm;
+  }
+  .appBar {
+    background-color: $dark-sec !important;
+  }
+  .bod {
+    background-color: $dark-sec !important;
+  }
+  .footer {
+    color: $dark-sec !important;
+    background-color: $dark-prm !important;
+  }
+  .nav .icon:after {
+    background-color: $dark-prm !important;
+  }
+  .dropDown {
+    background-color: rgba(27, 36, 50, 0.9);
+  }
+  .form-div .Button{
+    background-color: $dark-sec;
+    color: $dark-prm;
+  }
+}
+.light {
+  h3,
+  .icon,
+  .ddIcon {
+    color: $light-prm;
+  }
+  .appBar {
+    background-color: $light-sec !important;
+  }
+  .bod {
+    background-color: $light-sec !important;
+  }
+  .footer {
+    color: $light-sec !important;
+    background-color: $light-prm !important;
+  }
+  .nav .icon:after {
+    background-color: $light-prm !important;
+  }
+  .dropDown {
+    background-color: rgba(234, 234, 234, 0.9);
+  }
+  .form-div .Button{
+    background-color: $light-sec;
+    color: $light-prm;
+  }
+}
+
 //removing pre-padding of header components
 h3 {
   margin-top: 0;
@@ -10,7 +67,7 @@ h3 {
 }
 //basic shaping
 .bod {
-  min-height: 190vh;
+  min-height: 80vh;
   // padding-top: 30px;
   padding: 30px 20px 10px 20px;
 }
@@ -70,7 +127,7 @@ h3 {
 //rough
 img {
   //testing only
-  width: 90%;
+  width: 40%;
 }
 
 //dropdown handler
@@ -96,45 +153,24 @@ img {
   height: 40px !important;
 }
 
+//footer component
 
-//theme specific styling
-.dark {
-  h3,
-  .icon,
-  .ddIcon {
-    color: $dark-prm;
-  }
-  .appBar {
-    background-color: $dark-sec !important;
-  }
-  .bod {
-    background-color: $dark-sec !important;
-  }
-  .nav .icon:after {
-    background-color: $dark-prm !important;
-  }
-  .dropDown {
-    background-color: rgba(27, 36, 50, 0.9);
-  }
+.footer {
+  min-height: 40vh;
+  display: flex;
+  flex-direction: row;
 }
-.light {
-  h3,
-  .icon,
-  .ddIcon {
-    color: $light-prm;
-  }
-  .appBar {
-    background-color: $light-sec !important;
-  }
-  .bod {
-    background-color: $light-sec !important;
-  }
-  .nav .icon:after {
-    background-color: $light-prm !important;
-  }
-  .dropDown {
-    background-color: rgba(234, 234, 234, 0.9);
-  }
+.foot-l-div {
+  flex: 0.5;
+  margin: 4%;
+}
+.form-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
+  max-width: 500px;
+  margin: auto;
 }
 
 
@@ -161,5 +197,18 @@ img {
   }
   .nav {
     display: none;
+  }
+  .footer{
+    display: flex;
+    flex-direction: column;
+  }
+  .foot-l-div{
+    flex:1;
+  }
+  .form-div{
+    display: flex;
+    min-height: 200px;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
