added dynamic transitions

--- a/src/comp/styles.scss
+++ b/src/comp/styles.scss
@@ -198,6 +198,9 @@ img {
 .social-div {
   height: inherit;
   background-color: #b76d68;
+  margin: auto;
+  max-width: 500px;
+  // background-color: #7a306c;
 }
 
 //media queries
