--- a/src/comp/styles.scss
+++ b/src/comp/styles.scss
@@ -3,8 +3,10 @@
 //theme variables
 $dark-prm: #b76d68;
 $dark-sec: #1b2432;
+$dark-prm2: #7c99d5;
 $light-prm: #7a306c;
 $light-sec: #eaeaea;
+$light-prm2: #287b21;
 //font
 * {
   font-family: "Lato", sans-serif;
