--- a/src/comp/pages/styles.scss
+++ b/src/comp/pages/styles.scss
@@ -5,6 +5,7 @@ $dark-prm2: #7c99d5;
 $light-prm: #7a306c;
 $light-sec: #eaeaea;
 $light-prm2: #287b21;
+//home-page
 //animations
 .floating {
   animation-name: floating;
@@ -130,6 +131,113 @@ $light-prm2: #287b21;
     animation: glow 1.5s forwards;
   }
 }
+
+// about me page
+
+//intro
+.about #intro {
+  display: flex;
+  margin: 0 auto;
+  justify-content: space-evenly;
+}
+
+.about #intro .profPic {
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  padding: 40px;
+  margin-top: 60px;
+}
+.about #intro #intro_txt{
+  max-width: 500px;
+  font-size: larger;
+}
+
+//skills
+
+.about #skills{
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  justify-content: center;
+  width: fit-content;
+}
+.about #skills #icons{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  max-width: 800px;
+}
+.about #skills #icons img{
+  border: 2px solid;
+  padding: 10px;
+  border-color: $dark-prm2;
+  margin: 10px;
+}
+.about #skills #icons img:hover{
+  transform: scale(1.1);
+  transition: cubic-bezier(0.215, 0.610, 0.355, 1) 1s;
+}
+
+// tools
+.about #tools{
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  justify-content: center;
+  width: fit-content;
+  text-align: end;
+}
+.about #tools #icons{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  max-width: 650px;
+}
+.about #tools #icons img{
+  border: 2px solid;
+  padding: 10px;
+  border-color: $dark-prm2;
+  margin: 10px;
+}
+.about #tools #icons img:hover{
+  transform: scale(1.1);
+  transition: cubic-bezier(0.215, 0.610, 0.355, 1) 1s;
+}
+
+
+.light {
+  .about #intro {
+    color: $light-prm2;
+  }
+  .about #intro .profPic {
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+      rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+      rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+      rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+      rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  }
+  .about #intro .highlight {
+    color: $light-prm !important;
+  }
+}
+.dark {
+  .about #intro {
+    color: $dark-prm2;
+  }
+  .about #intro .profPic {
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+      rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+      rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+      rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+      rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  }
+  .about #intro .highlight {
+    color: $dark-prm !important;
+  }
+}
 @media screen and (max-width: 768px) {
   .respRC {
     flex-direction: column;
@@ -141,5 +249,13 @@ $light-prm2: #287b21;
       width: 100%;
       margin-bottom: 1rem;
     }
+  }
+  .about #intro{
+    flex-direction: column-reverse;
+    width: fit-content;
+    text-align: center;
+  }
+  .about #intro .profPic{
+    margin: auto;
   }
 }
