--- a/src/comp/styles.scss
+++ b/src/comp/styles.scss
@@ -10,6 +10,7 @@ $light-prm2: #287b21;
 //font
 * {
   font-family: "Lato", sans-serif;
+  -webkit-tap-highlight-color: rgba(255,255,255,0);
 }
 //theme specific styling
 .dark {
@@ -157,7 +158,7 @@ h3 {
     height: 0px;
   }
   to {
-    height: 240px;
+    height: 180px;
   }
 }
 .dropDown {
