--- a/src/comp/pages/styles.scss
+++ b/src/comp/pages/styles.scss
@@ -138,7 +138,7 @@ $light-prm2: #287b21;
 .about #intro {
   display: flex;
   margin: 0 auto;
-  justify-content: space-evenly;
+  justify-content: space-around;
 }
 
 .about #intro .profPic {
@@ -148,39 +148,39 @@ $light-prm2: #287b21;
   padding: 40px;
   margin-top: 60px;
 }
-.about #intro #intro_txt{
+.about #intro #intro_txt {
   max-width: 500px;
   font-size: larger;
 }
 
 //skills
 
-.about #skills{
+.about #skills {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   justify-content: center;
   width: fit-content;
 }
-.about #skills #icons{
+.about #skills #icons {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
   max-width: 800px;
 }
-.about #skills #icons img{
+.about #skills #icons img {
   border: 2px solid;
   padding: 10px;
   border-color: $dark-prm2;
   margin: 10px;
 }
-.about #skills #icons img:hover{
+.about #skills #icons img:hover {
   transform: scale(1.1);
-  transition: cubic-bezier(0.215, 0.610, 0.355, 1) 1s;
+  transition: cubic-bezier(0.215, 0.61, 0.355, 1) 1s;
 }
 
 // tools
-.about #tools{
+.about #tools {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -188,23 +188,22 @@ $light-prm2: #287b21;
   width: fit-content;
   text-align: end;
 }
-.about #tools #icons{
+.about #tools #icons {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  max-width: 650px;
+  max-width: 800px;
 }
-.about #tools #icons img{
+.about #tools #icons img {
   border: 2px solid;
   padding: 10px;
   border-color: $dark-prm2;
   margin: 10px;
 }
-.about #tools #icons img:hover{
+.about #tools #icons img:hover {
   transform: scale(1.1);
-  transition: cubic-bezier(0.215, 0.610, 0.355, 1) 1s;
+  transition: cubic-bezier(0.215, 0.61, 0.355, 1) 1s;
 }
-
 
 .light {
   .about #intro {
@@ -238,6 +237,124 @@ $light-prm2: #287b21;
     color: $dark-prm !important;
   }
 }
+
+// resume page
+p {
+  margin: 0;
+}
+.edu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.edu .edu_lf {
+  display: flex;
+  flex-direction: column;
+}
+.edu_gif {
+  border-radius: 50%;
+  height: 200px;
+  width: 200px;
+  margin: 0 auto;
+  border: 5px solid goldenrod;
+  padding: 10px;
+}
+.edu_data {
+  max-width: 600px;
+  width: fit-content;
+  height: fit-content;
+  margin-bottom: 50px;
+}
+.edu_row {
+  border: 3px solid;
+  transform: skew(1deg,1deg);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  // border-radius: 20px;
+  font-weight: 600;
+  padding: 10px;
+  display: block;
+  margin: 10px;
+  min-width: 300px;
+}
+.edu .edu_row:hover {
+  transition: cubic-bezier(0.215, 0.61, 0.355, 1) 1s;
+}
+.edu .edu_row.edu_row:nth-child(odd):hover {
+  transform: perspective(1000px) rotateY(10deg);
+}
+.edu .edu_row.edu_row:nth-child(even):hover {
+  transform: perspective(1000px) rotateY(-10deg);
+}
+.edu .edu_row:nth-child(odd) {
+  float: left;
+}
+.edu .edu_row:nth-child(even) {
+  float: right;
+}
+.edu .edu_data {
+  .degree {
+    box-sizing: border-box;
+    border: 2px solid;
+    color: $dark-prm;
+    padding: 3px;
+  }
+  .ed_head {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+.light {
+  .edu {
+    color: $light-prm2;
+  }
+  .edu_gif {
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+      rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+      rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+      rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+      rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    border-color: $light-prm;
+  }
+  .ed_grade {
+    color: $light-prm2 !important;
+  }
+  .edu .edu_row {
+    background-color: $light-sec;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+      rgba(0, 0, 0, 0.3) 0px 18px 36px -15px;
+  }
+  .edu .edu_row:hover {
+    background-color: rgba($color: #00f, $alpha: 0.2);
+  }
+}
+.dark {
+  .edu{
+    color: $dark-prm2;
+  }
+  .edu_gif {
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+      rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+      rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+      rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+      rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    border-color: $dark-prm;
+  }
+  .ed_grade {
+    color: $dark-prm2 !important;
+  }
+  .edu .edu_row {
+    background-color: $dark-sec;
+    box-shadow: rgba(255, 255, 255, 0.25) 0px 30px 30px -12px,
+      rgba(255, 255, 255, 0.3) 0px 18px 0px -15px;
+  }
+  .edu .edu_row:hover {
+    background-color: rgba($color: grey, $alpha: 0.2);
+  }
+}
+
 @media screen and (max-width: 768px) {
   .respRC {
     flex-direction: column;
@@ -250,12 +367,21 @@ $light-prm2: #287b21;
       margin-bottom: 1rem;
     }
   }
-  .about #intro{
+  .about #intro {
     flex-direction: column-reverse;
     width: fit-content;
     text-align: center;
   }
-  .about #intro .profPic{
+  .about #intro .profPic {
+    margin: auto;
+  }
+  .edu {
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 1rem;
+    justify-content: center;
+  }
+  .edu .edu_data {
     margin: auto;
   }
 }
