--- a/src/comp/pages/styles.scss
+++ b/src/comp/pages/styles.scss
@@ -385,3 +385,19 @@ p {
     margin: auto;
   }
 }
+
+.cvdiv{
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+#cv_btn{
+  text-align: center;
+  border-radius: 8px;
+  border : 3px solid mediumseagreen;
+  padding: 20px;
+  font-weight: 700;
+  color: mediumaquamarine;
+  background-color: rgba(255,255,255,0.2);
+  text-decoration: none;
+}
